# Crane

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  nightly.yml  release.yml
crates/crane-core/: Cargo.toml
crates/crane-core/src/: bandwidth.rs  lib.rs  network.rs  types.rs
crates/crane-core/src/config/: mod.rs  types.rs
crates/crane-core/src/db/: connections.rs  downloads.rs  mod.rs  retry_log.rs  site_settings.rs  speed_history.rs
crates/crane-core/src/engine/: chaos_responders.rs  download.rs  mod.rs  multi.rs
crates/crane-core/src/hash/: mod.rs
crates/crane-core/src/metadata/: analyzer.rs  mime.rs  mod.rs
crates/crane-core/src/protocol/: ftp.rs  http.rs  mod.rs
crates/crane-core/src/queue/: mod.rs
crates/crane-native-host/: Cargo.toml
docs/plans/: 2026-02-24-ftp-support-design.md  2026-02-24-ftp-support-implementation.md  2026-02-24-ui-overhaul-design.md  2026-02-24-ui-overhaul-implementation.md
extensions/chrome/: manifest.json  popup.css  popup.html  popup.js  service-worker.js
native-messaging/: com.crane.dl.json.macos  install.ps1  install.sh
scripts/: bump-version.sh
src/: App.tsx  index.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  notifications.rs  state.rs  tray.rs
src-tauri/src/commands/: downloads.rs  files.rs  mod.rs  settings.rs  system.rs
src/components/: DownloadList.tsx  ErrorFallback.tsx  UrlInput.tsx
src/data/: mockDownloads.ts
src/hooks/: useKeyboard.ts
src/lib/: commands.ts  format.ts  tauri.ts  theme.ts  types.ts
src/stores/: downloads.tsx  settings.tsx  ui.ts
src/styles/: globals.css  index.css
src/types/: download.ts  settings.ts
(+64 files in other folders)
