[package]
name = "crane-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "rustls-tls", "stream"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
urlencoding = "2"
futures-util = "0.3"
tokio-util = "0.7"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"
